--- a/lms/templates/courseware/accordion.html
+++ b/lms/templates/courseware/accordion.html
@@ -35,29 +35,55 @@ else:
 
 
                 <!--This is a POC Test for FE-generated Timezone displays-->
-                % if section.get('due') is None:
-                     <%
-                        due_date = ''
-                    %>
-                % else:
-                    % if time_zone is not None:
-                        <%
-                            formatted_string = get_time_display(section['due'], due_date_display_format, coerce_tz=time_zone)
-                            due_date = '' if len(formatted_string)==0 else _('due {date}').format(date=formatted_string)
-                        %>
-                        <script>console.log("${formatted_string}")</script>
-                    % else:
-                        ## load data first
-                        ## (obvs) will move to static file build
-                        <script type"text/javascript" src="http://momentjs.com/downloads/moment-timezone-with-data-2010-2020.js"></script>
-                        <script type="text/javascript" src="http://momentjs.com/downloads/moment-timezone.js"></script>
+                % if section.get('due') is not None:
+                    ## If we don't get a time_zone object (user pref)
+                    ## from django, we'll set the len of ${due_date} to none and perform a js transformation
+                    ## based on the user's browser settings
 
-                        <%
-                            due_date = ''
-                        %>
-                    % endif
+                    ## load data first
+                    ## (obvs) will move deps to static file build
+                    <script type"text/javascript" src="http://momentjs.com/downloads/moment-timezone-with-data-2010-2020.js"></script>
+                    <script type="text/javascript" src="http://momentjs.com/downloads/moment-timezone.js"></script>
+                    <script>
+                        ## global string for dates
+                        var local_due_date = ''
+
+                        ## Make me true to test browser generated timezones
+                        var test_browser = false
+
+                        function format_date_pref_tz() {
+                            ## to imitate the state of the current workflow,
+                            ## 'formatted_string' should look like
+                            ## -->
+                            ## Oct 14, 2016 at 8:00 UTC
+                            if ("${time_zone}" == "None" || test_browser == true) {
+                                console.log('browser gen tz')
+                                zone = moment.tz.guess()
+                            }
+                            else {
+                                console.log('prefs gen tz')
+                                zone = "${time_zone}"
+                            }
+                            var js_due_date = moment("${section['due']}").tz('UTC');
+                            ## UTC Object
+                            console.log(js_due_date.format('ha z'));
+
+                            ## Localized Object
+                            var localized_time = js_due_date.tz(zone).format('ll [at] HH[:]mm z');
+
+                            return localized_time
+                            }
+                        formatted_string = format_date_pref_tz()
+                        local_due_date = edx.StringUtils.interpolate(
+                                gettext('due {date}'),
+                                {
+                                    'date': formatted_string
+                                }
+                            )
+                    </script>
+                    ## Just to be polite, but can be eliminated
                 % endif
-
+                <!--This is a POC Test for FE-generated Timezone displays-->
 
 
                 ## There is behavior differences between
@@ -67,7 +93,7 @@ else:
                 ## Proctoring exposes a exam status message field as well as
                 ## a status icon
 
-                % if section['format'] or due_date or 'proctoring' in section:
+                % if section['format'] or 'proctoring' in section or section.get('due') is not None:
                 <p class="subtitle">
                     % if 'proctoring' in section:
                         ## Display the proctored exam status icon and status message
@@ -77,31 +103,22 @@ else:
                         ## completed proctored exam statuses should not show the due date
                         ## since the exam has already been submitted by the user
                         % if not section['proctoring'].get('in_completed_state', False):
-                            <span id=${section['url_name']} class="subtitle-name">${due_date}</span>
+
+                            <span id=${section['url_name']} class="subtitle-name"></span>
+                            <script>
+                                if (typeof local_due_date != 'undefined' && local_due_date != 'INVALID DATE') {
+                                    $('#${section['url_name']}').text(local_due_date);
+                                }
+                            </script>
                         % endif
                     % else:
                         ## non-proctored section, we just show the exam format and the due date
                         ## this is the standard case in edx-platform
                         ## added in section id for date overwrite
-                        <span id=${section['url_name']} class="subtitle-name">${section['format']} ${due_date}</span>
+                        <span id=${section['url_name']} class="subtitle-name"></span>
                         <script>
-                        if ('${section['due']}' != 'None') {
-                            function format_date() {
-                                var orig_date = "${section['due']}";
-                                var local_time = moment(orig_date).local();
-                                //'Sep 13, 2016 3:36 PM'
-                                // -->
-                                // Oct 14, 2016 at 8:00 UTC
-                                var formatted_time = local_time.format('ll [at] HH[:]mm');
-                                var time_zone_abbr = moment(local_time).tz(moment.tz.guess()).format('z')
-                                console.log("${due_date}")
-                                console.log([ 'due', formatted_time, time_zone_abbr ].join(' '))
-                                return [ 'due', formatted_time, time_zone_abbr ].join(' ')
-                                }
-                            formatted_date = format_date()
-                            console.log((["${section['format']}", formatted_date ]).join(' '))
-
-                            $('#${section['url_name']}').text(["${section['format']}", formatted_date ].join(' '));
+                            if (typeof local_due_date != 'undefined' && local_due_date != 'INVALID DATE') {
+                                $('#${section['url_name']}').text(["${section['format']}", local_due_date ].join(' '));
                             }
                         </script>
 
