included moment javascript with data - deprecated external calls

--- a/lms/templates/courseware/accordion.html
+++ b/lms/templates/courseware/accordion.html
@@ -42,8 +42,7 @@ else:
 
                     ## load data first
                     ## (obvs) will move deps to the appropriate place in the build, likely using require.js
-                    <script type="text/javascript" src="https://momentjs.com/downloads/moment-timezone-with-data.js"></script>
-                    <script type="text/javascript" src="https://momentjs.com/downloads/moment-timezone.js"></script>
+                    <script type="text/javascript" src="${static.url('js/moment-timezone-with-data.js')}"></script>
                     <script type="text/javascript" src="${static.url('js/localized_times.js')}"></script>
 
                     <script>
