--- a/lms/templates/courseware/progress.html
+++ b/lms/templates/courseware/progress.html
@@ -29,7 +29,7 @@ from django.utils.http import urlquote_plus
 <script type="text/javascript" src="${static.url('js/courseware/certificates_api.js') | h}"></script>
 <script type="text/javascript" src="${static.url('js/courseware/credit_progress.js') | h}"></script>
 <script type="text/javascript" src="${static.url('js/moment-timezone-with-data.js')}"></script>
-<script type="text/javascript" src="${static.url('js/localized_times.js')}"></script>
+<script type="text/javascript" src="${static.url('js/datetime_localize.js')}"></script>
 <script>
   ${progress_graph.body(grade_summary, course.grade_cutoffs, "grade-detail-graph", not course.no_grade, not course.no_grade) | h}
 </script>
