ui toolkit-type buildout. progress page

--- a/lms/templates/courseware/accordion.html
+++ b/lms/templates/courseware/accordion.html
@@ -87,7 +87,7 @@ else:
     </%static:require_module_async>
 % endif
 
-<%static:require_module_async module_name="js/student_account/date_util" class_name="LocalizedDatetime">
-    LocalizedDatetime();
+<%static:require_module_async module_name="js/student_account/date_display" class_name="DateDisplay">
+    DateDisplay();
 </%static:require_module_async>
 
