Add instructor dashboard help tokens
Define additional tokens for instructor dashboard tabs and add them to
the individual template files

--- a/lms/templates/instructor/instructor_dashboard_2/certificates.html
+++ b/lms/templates/instructor/instructor_dashboard_2/certificates.html
@@ -1,6 +1,9 @@
 <%page args="section_data" expression_filter="h"/>
 <%namespace name='static' file='../../static_content.html'/>
 
+<%def name="online_help_token()"><% return "instructorcerts" %></%def>
+<%def name="doc_base_url()"><% return settings.INSTRUCTOR_DOC_LINK_BASE_URL %></%def>
+
 <%!
 from django.utils.translation import ugettext as _
 from openedx.core.djangolib.js_utils import dump_js_escaped_json, js_escaped_string
