--- a/lms/templates/instructor/instructor_dashboard_2/instructor_analytics.html
+++ b/lms/templates/instructor/instructor_dashboard_2/instructor_analytics.html
@@ -1,5 +1,8 @@
 <%page expression_filter="h" args="section_data"/>
 
+<%def name="online_help_token()"><% return "instructoranalytics" %></%def>
+<%def name="doc_base_url()"><% return settings.INSTRUCTOR_DOC_LINK_BASE_URL %></%def>
+
 <%!
 from django.utils.encoding import escape_uri_path
 from django.utils.translation import ugettext as _
