--- a/lms/templates/instructor/instructor_dashboard_2/send_email.html
+++ b/lms/templates/instructor/instructor_dashboard_2/send_email.html
@@ -1,4 +1,7 @@
 <%page args="section_data" expression_filter="h"/>
+
+<%def name="online_help_token()"><% return "instructoremail" %></%def>
+<%def name="doc_base_url()"><% return settings.INSTRUCTOR_DOC_LINK_BASE_URL %></%def>
 <%!
 from django.utils.translation import ugettext as _
 from openedx.core.djangolib.markup import HTML
